--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glsl-transition",
-  "version": "0.6.3",
+  "version": "0.6.4",
   "description": "Make Transitions Effects with the power of WebGL Shaders (GLSL)",
   "keywords": [
     "glsl",
@@ -27,18 +27,19 @@
   },
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-cli": "~0.1.6",
-    "grunt-contrib-jshint": "~0.6.0",
-    "grunt-contrib-watch": "~0.4.4",
-    "grunt-contrib-connect": "0.6.0",
-    "matchdep": "~0.1.2",
-    "grunt-shell": "0.6.1",
-    "grunt-gh-pages": "~0.9.0",
     "grunt-browserify": "1.3.0",
+    "grunt-cli": "~0.1.6",
+    "grunt-contrib-connect": "0.6.0",
+    "grunt-contrib-jshint": "~0.6.0",
+    "grunt-contrib-uglify": "^0.5.0",
+    "grunt-contrib-watch": "~0.4.4",
+    "grunt-gh-pages": "~0.9.0",
     "grunt-saucelabs": "4.1.2",
+    "grunt-shell": "0.6.1",
+    "matchdep": "~0.1.2",
     "mocha": "1.14.0",
-    "qimage": "1.1.x",
     "ndarray": "1.0.10",
-    "ndarray-distance": "0.0.0"
+    "ndarray-distance": "0.0.0",
+    "qimage": "1.1.x"
   }
 }
