--- a/package.json
+++ b/package.json
@@ -25,21 +25,18 @@
     "raf": "2.0.x",
     "performance-now": "0.2.x"
   },
+  "scripts": {
+    "build": "browserify src/glsl-transition.js | uglifyjs -c -m > dist/transition.js",
+    "test": "cd test && beefy index.js"
+  },
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-browserify": "1.3.0",
-    "grunt-cli": "~0.1.6",
-    "grunt-contrib-connect": "0.6.0",
-    "grunt-contrib-jshint": "~0.6.0",
-    "grunt-contrib-uglify": "^0.5.0",
-    "grunt-contrib-watch": "~0.4.4",
-    "grunt-gh-pages": "~0.9.0",
-    "grunt-saucelabs": "4.1.2",
-    "grunt-shell": "0.6.1",
-    "matchdep": "~0.1.2",
-    "mocha": "1.14.0",
-    "ndarray": "1.0.10",
+    "beefy": "^2.1.3",
+    "browserify": "^9.0.3",
+    "mocha": "^2.2.0",
+    "ndarray": "^1.0.16",
     "ndarray-distance": "0.0.0",
-    "qimage": "1.1.x"
+    "q": "^1.0.1",
+    "qimage": "^1.2.0",
+    "uglify-js": "^2.4.16"
   }
 }
